Fixed some more minor things involving margins and the z-index of the nav bar.

--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@ body {
     overflow-x: hidden;
     overflow-y: scroll;
     border: none;
+    scrollbar-width: none; 
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
 
 main {
@@ -37,16 +42,19 @@ main {
     background-color: var(--Form);
     display: block;
     position: relative;
+    top: 72px;
+    height: fit-content;
 }
 
 nav {
-    box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.25);
-    position: sticky;
+    position: fixed;
     height: 72px;
     background-color: var(--Dark);
-    width: 102%;
+    width: 100%;
     overflow: hidden;
     align-items: center;
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
+    z-index: 5;
 }
 
 ul {
